# src/main/java/com/web3/with/entity/User.java
@@ -1,52 +1,0 @@
-package com.web3.with.entity;
-
-import com.web3.with.security.model.auth.AuthProvider;
-import jakarta.persistence.*;
-import lombok.*;
-import org.hibernate.annotations.Fetch;
-import org.hibernate.annotations.FetchMode;
-
-import java.util.HashSet;
-import java.util.Set;
-
-
-@Entity
-@Table(name = "app_user")
-@AllArgsConstructor
-@NoArgsConstructor
-@Getter
-@Setter
-public class User {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "id", nullable = false)
-    private Long id;
-
-    @Column(name = "login", nullable = false)
-    private String login;
-
-    @Column(name = "email", nullable = false)
-    private String email;
-
-    @Column(name = "password", nullable = false)
-    private String password;
-
-    @Column(name = "email_verified", nullable = false)
-    private boolean emailVerified = false;
-
-    @Enumerated(EnumType.STRING)
-    @Column(name = "auth_provider", nullable = false)
-    private AuthProvider authProvider;
-
-    @Column(name = "image_url", nullable = false)
-    private String imageUrl;
-
-    @ManyToMany(cascade = {CascadeType.DETACH, CascadeType.MERGE, CascadeType.PERSIST, CascadeType.REFRESH}, fetch = FetchType.LAZY)
-    @JoinTable(
-            name = "user_role",
-            joinColumns = {@JoinColumn(name = "user_id")},
-            inverseJoinColumns = {@JoinColumn(name = "role_id")}
-    )
-    private Set<Role> roles = new HashSet<>();
-}
